# TungstenForge

./: .gitmodules  CMakeLists.txt  README.md
CMake/: Config.hpp.in  TungstenForgeConfig.cmake.in  cmake_uninstall.cmake.in
TungstenForge/: CMakeLists.txt  projectExample.txt
TungstenForge/CMake/: Version.hpp.in
TungstenForge/include/TungstenForge/: TungstenForge.hpp
TungstenForge/res/Templates/: TungstenProjectCMakeListsTemplate.txt  TungstenReflectProjectDefines.in.hpp  TungstenRuntimeCMakeListsTemplate.txt  TungstenRuntimeProjectDefines.in.hpp
TungstenForge/res/TungstenReflect/src/: main.cpp
TungstenForge/res/TungstenRuntime/src/: main.cpp
TungstenForge/src/: TungstenForge.cpp
TungstenForgeCLI/: CMakeLists.txt
TungstenForgeCLI/CMake/: Version.hpp.in
include/TungstenForge/: TungstenForge.hpp
res/Templates/: TungstenProjectCMakeListsTemplate.txt  TungstenReflectCMakeListsTemplate.txt  TungstenReflectProjectDefines.in.hpp  TungstenRuntimeCMakeListsTemplate.txt  TungstenRuntimeProjectDefines.in.hpp
res/TungstenReflect/src/: main.cpp
res/TungstenRuntime/src/: main.cpp
src/: TungstenForge.cpp
